--- a/glide.yaml
+++ b/glide.yaml
@@ -1,8 +1,5 @@
-package: GameServer
+package: .
 import:
-- package: github.com/go-stack/stack
-- package: github.com/mattn/go-colorable
-- package: github.com/mattn/go-isatty
-- package: gopkg.in/check.v1
-- package: github.com/kr/pretty
-  version: ~0.1.0
+- package: github.com/chenjiajun1207/GameServer
+  subpackages:
+  - Log
